# ConsensusIQ

./: .env.example  .gitignore  README.md  app.py  build_dataset.py  check-signals.py  check_db.py  check_herd.py  check_sector.py  correlation_engine.py  main.py  products_public.json  pyproject.toml  railway.json  render.yaml  requirements.txt  reviews_public.json  sql_engine.py  test_agents.py  test_market.py  transactions_public.json  users_public.json
src/: agents.py  database.py  groq_agent.py  herd_score.py  market_data.py  news_collector.py  pipeline.py
templates/: dashboard.html
